- Removed all runBlocking(dispatcher) { ... } calls on the EDT (they were deadlocking the UI thread on its own dispatcher when the UI was started in standalone mode. This bug was not picked up in our tests). - fixes to the start-demo files to set the correct paths and preserve executable permissions